<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="general_next">Next</string>
    <string name="general_prompt">Prompt</string>
    <string name="general_reminder">Warm Reminder</string>
    <string name="general_tip">Tip</string>
    <string name="general_got_it">Got it</string>
    <string name="general_ok">OK</string>
    <string name="general_save">SAVE</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_yes">Yes</string>
    <string name="general_start">Start</string>
    <string name="general_no">No</string>
    <string name="general_error">Error</string>
    <string name="general_faild">Failed</string>
    <string name="general_change">Change</string>
    <string name="general_retry">Retry</string>
    <string name="general_loading">Loading...</string>
    <string name="general_network_faild">Network is not stable, pls try again!</string>
    <string name="general_clouding">Synchronizing...</string>
    <string name="general_clouding_success">Synchronized complete</string>
    <string name="general_clouding_failure">Synchronized fail</string>
    <string name="general_wait">Wait...</string>
    <string name="general_about">About</string>
    <string name="general_send">Sending...</string>
    <string name="general_share">Share</string>
    <string name="general_invild">Invalid</string>
    <string name="general_delete">Delete</string>
    <string name="general_not_delete">Can not Delete</string>
    <string name="general_back">Back</string>
    <string name="general_male">Male</string>
    <string name="general_more">More</string>
    <string name="general_no_more_data">No more data</string>
    <string name="general_null_data">No more data</string>
    <string name="general_female">Female</string>
    <string name="general_submitting">Submitting...</string>
    <string name="general_nodata">no records</string>
    <string name="general_sport">Sport</string>
    <string name="general_sleep">Sleep</string>
    <string name="general_null_label">No messages Posted Yet</string>
    <string name="general_dialog_sync_text"> {0}% complete({2} out of {1} data points have been downloaded)</string>
    <string name="general_dialog_oad">{0}% completed \nDo not lock your phone,keep app on the front!</string>
    <string name="general_dialog_oad_text">{0}% complete({2} out of {1} data points have been downloaded)</string>
    <string name="general_sync_time">{0}, {1}tips</string>
    <string name="general_sycing">Synchronizing...</string>
    <string name="general_sync_end">Synchronization is complete</string>
    <string name="general_oad_end">Update complete</string>
    <string name="general_oad_fail">Update failed</string>
    <string name="general_add">Add</string>
    <string name="general_reduce">Reduce</string>
    <string name="portal_main_isbounding">Bounding...</string>
    <string name="app_name">FitIncluded</string>
    <string name="app_start">Welcome to FIT INCLUDED</string>
    <string name="login_form_title">Login FIT INCLUDED</string>
    <string name="login_form_hint_loginname">Email</string>
    <string name="login_form_hint_loginpassword">Password</string>
    <string name="login_form_btn_register">Register</string>
    <string name="login_form_btn_login">Log In</string>
    <string name="login_form_cb_rememberpsw">Remember your name?</string>
    <string name="login_form_btn_forgetpsw">Forgot password >></string>
    <string name="login_form_version_info">Version: {0}({1})</string>
    <string name="login_form_validate_login_name_empty">User name is necessary!</string>
    <string name="login_form_validate_login_psw_length_less_six">Must compelete the password!</string>
    <string name="login_form_have_latest_version">Have latest version</string>
    <string name="login_form_have_latest_version_descrption">We strongly recommend that you update to the latest version in order to get better service. Continue to use the older version may cause problems. You can also e-mail us with \"support@linkloving.com\".</string>
    <string name="login_form_have_latest_version_update_now">Update now!</string>
    <string name="login_form_have_latest_version_ignore">Ignore</string>
    <string name="forgot_password_title">Reset Password</string>
    <string name="main_about_send_mail_title">Feedback</string>
    <string name="main_about_send_mail_content">The email content can not be empty!</string>
    <string name="chat_sendpic_image_view_multitouch_hint">Tip: Supports multi-touch zoom in and out image</string>
    <string name="chat_sendpic_image_view_sendpic">Send image</string>
    <string name="chat_sendpic_image_view_imageloading">Image loading...</string>
    <string name="chat_sendpic_image_view_title">View image</string>
    <string name="chat_sendpic_image_view_oom_for_rotate">Insufficient memory to rotate the picture is not successful, you can restart the program and try again!</string>
    <string name="chat_sendpic_image_view_file_path_not_valid">Image path is not valid, please try again after checking the SD card!</string>
    <string name="chat_sendpic_image_view_image_not_valid">Image not valid or be removed, failed to load.</string>
    <string name="chat_sendpic_image_view_imageloading2">Image loading...</string>
    <string name="chat_sendpic_image_view_imagebig_for_memery">Image is so large, you can restart the program and try again!</string>
    <string name="chat_sendpic_image_view_imagedata_not_valid">Image date is not valid, please try again!</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="login_form_exit_app_tip">Are you sure to exit?</string>
    <string name="login_form_error_message">Login failed!</string>
    <string name="login_form_error">Error connecting to the server and login,result==null</string>
    <string name="login_form_loading_login">Logging...</string>
    <string name="login_form_version_error">Update version error.</string>
    <string name="login_form_error_psw_tip">Error</string>
    <string name="login_form_error_psw_message">Invalid login information, please check your Email and password.</string>
    <string name="login_form_relogin_text">Switch User</string>
    <string name="login_form_account">Email</string>
    <string name="login_form_password">Password</string>
    <string name="login_form_register">REGISTER</string>
    <string name="login_form_login">LOGIN</string>
    <string name="login_form_qq_login">QQ Log In</string>
    <string name="login_form_forgot_password">Forgot password >></string>
    <string name="register_form_title">REGISTER</string>
    <string name="register_form_view_nickname">Nickname</string>
    <string name="register_form_view_eMail">Email</string>
    <string name="register_form_view_password">Password *</string>
    <string name="register_form_view_confirmpsw">Confirm Password *</string>
    <string name="register_form_view_height">Height:</string>
    <string name="register_form_view_weight">Weight:</string>
    <string name="register_form_view_age">Age:</string>
    <string name="register_form_view_man">Male</string>
    <string name="register_form_view_woman">Female</string>
    <string name="register_form_view_agreelisence">Accept</string>
    <string name="register_form_view_look_caluse">Read terms >></string>
    <string name="register_form_btn_submit">Register</string>
    <string name="register_form_valid_nick_name">The nickname is necessary! </string>
    <string name="register_form_valid_mail">Email is necessary!</string>
    <string name="register_form_valid_psw">The password is necessary!</string>
    <string name="register_form_valid_psw_notenouph">Your password is too short! Use at least 6 characters.</string>
    <string name="register_form_valid_psw_not_same">The two passwords are different!</string>
    <string name="register_form_valid_agree_role">Please read and accept the terms before registeration!</string>
    <string name="register_form_error_mail_exist">Failed in registeration,the Email has been registered!</string>
    <string name="register_form_error_message">Failed in registeration, unknown error!</string>
    <string name="register_form_error_height">Failed in registeration, unknown error!</string>
    <string name="register_form_error_weight">Failed in registeration, unknown error!</string>
    <string name="register_form_error_age">Failed in registeration, unknown error!</string>
    <string name="register_form_mail_have_exist">Failed in registeration,the Email has been registered!</string>
    <string name="register_form_mail_ok">Email is available</string>
    <string name="register_form_next_step">Next（1/2）</string>
    <string name="register_success_title">Succeeded!</string>
    <string name="register_success_experience">Come on in</string>
    <string name="register_success_mail">Email:</string>
    <string name="menu_clock">Alarms</string>
    <string name="menu_sedentary">Inactive Alert</string>
    <string name="menu_body">Profile Info</string>
    <string name="menu_sport_data">Trends</string>
    <string name="menu_goal">Goal</string>
    <string name="menu_ranking">Ranking</string>
    <string name="menu_more">More</string>
    <string name="menu_ring">Find Reflex</string>
    <string name="menu_exit">Exit Now</string>
    <string name="menu_exit_app">Sign out</string>
    <string name="menu_exit_mode">Select way to sign out</string>
    <string name="portal_activity_more">More</string>
    <string name="main_more_theme">Modify Theme</string>
    <string name="main_more_version_check_is_latest">Your APP version is latest</string>
    <string name="main_more_privacy_messiage_on">Your profile/step total is now hidden from the Fitinlcluded Public Community.</string>
    <string name="main_more_privacy_messiage_off">Your profile/step total is now available to the Fitincluded Public Community. Users can find, follow, and see your daily step totals.</string>
    <string name="main_more_version">Version</string>
    <string name="main_more_privacy">Privacy Setting</string>
    <string name="main_more_privacy_title">Settings</string>
    <string name="main_more_setting">App Settings</string>
    <string name="main_more_privacy_switch_google_on">Google Fit Sync has been turned on.Return to main page to link your google account with Fitincluded</string>
    <string name="main_more_privacy_switch_google_off">Google Fit Sync has been turned off.</string>
    <string name="main_more_privacy_switch_unit">Unit settings have been changed.</string>
    <string name="main_about_terms_conditions">Terms and Conditions</string>
    <string name="main_about_privacy_policy">Privacy policy</string>
    <string name="main_about_weibo">Facebook</string>
    <string name="main_about_douban">Twitter</string>
    <string name="main_about_official_website">www.fitincluded.com</string>
    <string name="main_about_mail">support@fitincluded.com</string>
    <string name="main_about_publish_by">Producted by FitIncluded CO., LTD</string>
    <string name="user_info_update_user_height">Height(cm)</string>
    <string name="user_info_update_user_weight">Weight(kg)</string>
    <string name="user_info_update_user_age">Age</string>
    <string name="user_info_update_user_psw_old_psw">Password</string>
    <string name="user_info_update_user_psw_new_psw">New Password</string>
    <string name="user_info_update_user_psw_repeat_new_psw">Confirm Password</string>
    <string name="bound_title"> PAIR WRISTBAND </string>
    <string name="bound_skip">Skip</string>
    <string name="bound_pick_up">To activate,remove tracker and begin charging by connecting the cable to a USB power source</string>
</resources>