<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_info_update_user_psw_LL"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp" >

    <TextView
        android:id="@+id/activity_sport_data_detail_sleepSumView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/user_info_update_user_psw_old_psw"
        android:textColor="@color/medium_gray2"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_info_update_user_psw_old_psw"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/chat_put_in"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/user_info_update_user_psw_new_psw"
        android:textColor="@color/medium_gray2"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_info_update_user_psw_new_psw"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/chat_put_in"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/user_info_update_user_psw_repeat_new_psw"
        android:textColor="@color/medium_gray2"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_info_update_user_psw_repeat_new_psw"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/chat_put_in"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="" />

</LinearLayout>