<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="53.5dp"
        android:background="@drawable/widget_title_bar_bg" >

        <TextView
            android:id="@+id/activity_sport_data_detail_sleepSumView"
            style="@style/text_darkShadow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bound_title"
            android:textColor="@color/white"
            android:textSize="@dimen/m00_font_size_36pt" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right|center_vertical"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/button1"
                style="@style/text_darkShadow7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/bound_title_bg"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/bound_skip"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </FrameLayout>

    
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/dashed_bg"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/text_witheShadow1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/bound_pick_up"
                        android:textColor="@color/medium_gray"
                        android:textSize="@dimen/m00_font_size_30pt" />
                </LinearLayout>

                
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="300dp"
                    android:layout_marginTop="40dp"
                    android:layout_weight="3"
                    android:background="@drawable/bounded_step1_image" />
            </LinearLayout>

           
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="5"
                android:gravity="center|bottom"
                android:orientation="vertical" >
                

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:drawablePadding="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_marginBottom="15dp"        
                    android:background="@drawable/common_btn_login"
                    android:text="Next"
                    android:textColor="@color/white"
                    android:textSize="@dimen/m00_font_size_28pt" />
            </LinearLayout>
        </LinearLayout>
    
        

</LinearLayout>